Update 'README.md' for directory structures.

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -1,9 +1,9 @@
 # Data Structures and Algorithms - Final Project
-# Makefile.inc
+# The main Makefile.inc
 
 CC       = gcc
 CXX      = g++
-CFLAGS   = = -O2 -std=c99 -Wall
+CFLAGS   = -O2 -std=c99 -Wall
 CXXFLAGS = -O2 -std=c++11 -Wall
 
 RM       = rm -rf
