Add definition of classes 'Bank', 'Account' and 'AccountSet'.

--- a/src/core/Makefile
+++ b/src/core/Makefile
@@ -6,6 +6,7 @@ include ../../Makefile.inc
 .PHONY: all clean
 
 INCS = \
+	-I../../include \
 
 LIBS = \
 
@@ -13,8 +14,13 @@ TARGETS = \
 
 OBJECTS = \
 	final_project.o \
+	bank.o \
 
 HEADERS = \
+	core.hpp \
+	bank.hpp \
+	account.hpp \
+	../../include/account_set.hpp \
 
 all: $(TARGETS) $(OBJECTS)
 
