--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,7 +1,9 @@
 # Data Structures and Algorithms - Final Project
 # Makefile of /lib
+#
+# Make sure $(DSA) is set as the root of this project
 
-include ../Makefile.inc
+include $(DSA)/Makefile.inc
 
 .PHONY: all clean
 
