Add methods of 'Account'. Move 'src/core/core.pp' to 'include/dsa.hpp'.

--- a/ext/zedwood/src/Makefile
+++ b/ext/zedwood/src/Makefile
@@ -20,7 +20,7 @@ HEADERS = \
 all: $(OBJECTS)
 
 %.o: %.cpp $(HEADERS)
-	$(CXX) $(CXXFLAGS) -c $< $(INCLUDE) $(INCS) $(LIBRARY) $(LIBS) -o $@
+	$(CXX) $(CXXFLAGS) -c $< $(INCLUDE) $(INCS) -o $@
 
 clean:
 	$(RM) $(OBJECTS)
