Add 'core' library. Move 'src/core/final_project.cpp' into 'src/main'.

--- a/ext/zedwood/src/Makefile
+++ b/ext/zedwood/src/Makefile
@@ -20,7 +20,7 @@ HEADERS = \
 all: $(OBJECTS)
 
 %.o: %.cpp $(HEADERS)
-	$(CXX) $(CXXFLAGS) -c $< $(INCLUDE) $(INCS) -o $@
+	$(CXX) $(CXXFLAGS) -c $< $(INCS) $(INCLUDE) -o $@
 
 clean:
 	$(RM) $(OBJECTS)
