--- a/ext/zedwood/src/Makefile
+++ b/ext/zedwood/src/Makefile
@@ -18,6 +18,7 @@ OBJECTS = \
 HEADERS = \
 
 all: $(OBJECTS)
+	@echo > /dev/null
 
 %.o: %.cpp $(HEADERS)
 	$(CXX) $(CXXFLAGS) -c $< $(INCS) $(INCLUDE) -o $@
