--- a/src/core/Makefile
+++ b/src/core/Makefile
@@ -24,6 +24,7 @@ HEADERS = \
 	$(DSA)/include/history_map.hpp \
 
 all: $(OBJECTS)
+	@echo > /dev/null
 
 %.o: %.cpp $(HEADERS)
 	$(CXX) $(CXXFLAGS) -c $< $(INCS) $(INCLUDE) -o $@
