--- a/src/history_hash_map/Makefile
+++ b/src/history_hash_map/Makefile
@@ -34,7 +34,7 @@ HEADERS = \
 all: $(TARGET)
 	@echo > /dev/null
 
-$(TARGET): $(OBJECTS) $(TARGETDIR)
+$(TARGET): $(OBJECTS) | $(TARGETDIR)
 	$(ARCHIVE) $@ $(OBJECTS)
 	-$(RANLIB) $@
 
