--- a/src/account_skip_list/Makefile
+++ b/src/account_skip_list/Makefile
@@ -30,7 +30,7 @@ HEADERS = \
 all: $(TARGET)
 	@echo > /dev/null
 
-$(TARGET): $(OBJECTS) $(TARGETDIR)
+$(TARGET): $(OBJECTS) | $(TARGETDIR)
 	$(ARCHIVE) $@ $(OBJECTS)
 	-$(RANLIB) $@
 
