[account_avl_tree] Add at, emplace, score. Debug.

--- a/src/account_avl_tree/Makefile
+++ b/src/account_avl_tree/Makefile
@@ -18,9 +18,11 @@ LIBS = \
 
 OBJECTS = \
 	account_map.o \
+	avl.o \
 
 HEADERS = \
 	account_map.hpp \
+	avl.h \
 
 all: $(TARGET)
 	@echo > /dev/null
